# automax

./: .flake8  .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  CODE_OF_CONDUCT.md  LICENSE.md  README.md  SECURITY.md  TODO.md  database_odbc_examples.yaml  index.html  mkdocs.yml  objects.inv  pyproject.toml  pytest.ini  requirements-docs.txt  requirements.txt  setup.cfg  setup.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: security.md
.github/workflows/: ci.yml  codeql.yml  docs.yml  publish.yml
CONTRIBUTING/: index.html
DEVELOPER-NOTES/: index.html
docs/: CONTRIBUTING.md  DEVELOPER-NOTES.md  NEXT_DESIGN.md  TECHNICAL_DESIGN.md  database_odbc_examples.yaml  index.md  quickstart.md
docs/concepts/: architecture.md  execution-model.md  plugin-system.md
docs/guides/: account-access.md  command-secrets.md  creating-plugins.md  cron.md  development-tooling.md  development-utils.md  doctor.md  dynamic-inventory.md  explain.md  facts.md  firewall.md  first-local-job.md  first-ssh-job.md  graph.md  init-workspace.md  installation.md  job-inspection-and-recovery.md  kernel-tuning.md  linux-security-modules.md  mounts.md  output-mapping.md  package-repositories.md  publishing-docs.md  runbook.md  ssh-smoke.md  template-workflows.md  templating.md  using-examples.md  writing-jobs.md
docs/plugins/: alternatives.md  archive.md  aws-secrets-manager.md  azure-key-vault.md  check-icmp-connection.md  check-network-connection.md  check-tcp-connection.md  commands.md  compress-file.md  database-operations.md  database.md  facts-cron.md  filesystem.md  firewall.md  generated.md  google-secret-manager.md  hashicorp-vault.md  http-api.md  index.md  kernel-storage.md  linux-operations.md  local-command.md  package-manager.md  read-file-content.md  run-http-request.md  security.md  send-email.md  ssh-command.md  system.md  systemctl.md  transfer.md  uncompress-file.md  users-groups-processes.md  wait-assert.md  write-file-content.md
docs/reference/: api.md  artifacts.md  cli.md  error-policy.md  future-work.md  inventory-vars-secrets.md  job-dsl.md  locking.md  output-formats.md  python-compatibility.md  retry.md  schemas.md  security.md  state-and-resume.md  testing-and-ci.md  validation.md
examples/.ssh/: id_ed25519  id_ed25519.pub
examples/advanced/: ci-cd-pipeline.yaml  data-processing.yaml  monitoring-alerts.yaml  multi-cloud-secrets.yaml
examples/basic/: database-operations.yaml  file-operations.yaml  http-request.yaml  local-command.yaml  network-checks.yaml  send-email.yaml  ssh-commands.yaml
examples/config/: config.yaml
examples/inventory/: local.yaml
examples/jobs/: database-sqlite.yaml  local-smoke.yaml  plugin-workflow.yaml  smoke.yaml  strategy-tags-failure.yaml  template-workflow.yaml
examples/next/inventory/: lab.yaml  local.yaml
examples/next/jobs/: database-sqlite.yaml  local-smoke.yaml  macro-plugins.yaml  smoke.yaml  strategy-tags-failure.yaml  template-workflow.yaml
examples/next/secrets/: lab.example.yaml
examples/next/templates/: app.conf.j2
examples/next/vars/: lab.yaml
examples/runbooks/: .gitignore  README.md  RUNBOOK_INDEX.md  lab-inventory.example.yaml  lab-secrets.example.yaml  lab-vars.example.yaml
examples/runbooks/runbooks/: 01-alternatives.check.yaml  02-apparmor.check.yaml  03-archive.check.yaml  03-data-archive.check.yaml  04-assert.check.yaml  05-auditd.check.yaml  06-authselect.check.yaml  07-backup.check.yaml  07-data-backup-restore.check.yaml  08-blkid.check.yaml  09-block.check.yaml  10-capability.check.yaml  11-cert.check.yaml  12-chrony.check.yaml  13-cron.check.yaml  13-system-cron.check.yaml  14-db.check.yaml  15-data-download.check.yaml  15-download.check.yaml  16-env.check.yaml  17-facts.check.yaml  (+58 more)
examples/secrets/: lab.example.yaml
examples/steps/: __init__.py
examples/vars/: lab.yaml
guides/creating-plugins/: index.html
guides/development-utils/: index.html
guides/output-mapping/: index.html
guides/templating/: index.html
guides/using-examples/: index.html
plugins/: index.html
plugins/aws-secrets-manager/: index.html
plugins/azure-key-vault/: index.html
plugins/check-icmp-connection/: index.html
plugins/check-network-connection/: index.html
plugins/check-tcp-connection/: index.html
plugins/compress-file/: index.html
plugins/database-operations/: index.html
plugins/google-secret-manager/: index.html
plugins/hashicorp-vault/: index.html
plugins/local-command/: index.html
plugins/read-file-content/: index.html
plugins/run-http-request/: index.html
plugins/send-email/: index.html
plugins/ssh-command/: index.html
plugins/uncompress-file/: index.html
plugins/write-file-content/: index.html
reference/api/: index.html
scripts/: check-python39-compat.py  ssh-smoke.sh
src/automax/: __init__.py  __main__.py  cli.py  main.py
tests/: __init__.py  conftest.py  test_cli.py  test_documentation_and_regressions.py  test_engine.py  test_next_engine.py
tests/config/: config.yaml
tests/test_cli/: test_cli.py
tests/test_core/: __init__.py  test_common_utils.py  test_config_manager.py  test_data_transformer.py  test_dynamic_step_configuration.py  test_jinja2_templating.py  test_logger_manager.py  test_output_mapping.py  test_parameter_resolution.py  test_plugin_manager.py  test_plugin_template_support.py  test_step_hooks.py  test_template_manager.py  test_template_output_mapping.py
tests/test_plugins/: __init__.py  test_aws_secrets_manager.py  test_azure_key_vault.py  test_check_icmp_connection.py  test_check_network_connection.py  test_check_tcp_connection.py  test_compress_file.py  test_database_operations.py  test_google_secret_manager.py  test_hashicorp_vault.py  test_local_command.py  test_plugin_base.py  test_read_file_content.py  test_run_http_request.py  test_send_email.py  test_ssh_command.py  test_uncompress_file.py  test_write_file_content.py
tests/test_steps/: __init__.py  test_steps.py
utils/: check_config.py  check_step_deps.py  dry_run_validate.py  lint_yaml.py  validate_plugin.py  validate_plugins.py  validate_step.py
(+127 files in other folders)
