[build-system]
requires = ["setuptools>=80.9.0", "wheel", "build", "twine>=6.2.0"]
build-backend = "setuptools.build_meta"

[project]
name = "automax"
version = "0.1.1"
description = "YAML-driven modular automation framework"
license-files = ["LICENSE.md"]
authors = [{ name = "Marco Fortina", email = "marco_fortina@hotmail.it" }]
requires-python = ">=3.9"
dependencies = [
    "pyyaml>=6.0,<7.0",
    "jsonschema>=4.18,<5.0",
    "psutil>=5.9,<6.0",
    "boto3>=1.34,<2.0",
    "azure-identity>=1.15,<2.0",
    "azure-keyvault-secrets>=4.7,<5.0",
    "hvac>=2.1,<3.0",
    "google-cloud-secret-manager>=2.18,<3.0",
    "pyodbc>=5.0,<6.0",
    "click>=8.1,<9.0",
    "paramiko>=3.4,<4.0",
    "requests>=2.28,<3.0",
    "ping3>=4.0,<5.0",
    "Jinja2>=3.1,<4.0"
]

classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

readme = "README.md"

[project.scripts]
automax = "automax.cli:cli_main"

[project.optional-dependencies]
dev = [
    "pytest>=7.4,<8.0",
    "black>=23.9,<24.0",
    "flake8>=6.0,<7.0",
    "isort>=5.12,<6.0",
    "coverage>=6.5,<7.0",
    "docformatter>=1.6,<2.0",
]

[project.urls]
Homepage = "https://github.com/marcofortina/automax"
Repository = "https://github.com/marcofortina/automax"
Changelog = "https://github.com/marcofortina/automax/blob/main/CHANGELOG.md"
Issues = "https://github.com/marcofortina/automax/issues"
Download = "https://github.com/marcofortina/automax/releases"

[tool.setuptools.packages.find]
where = ["src"]

[tool.docformatter]
wrap-summaries = 88
wrap-descriptions = 88
blank = true
make-summary-multi-line = true
pre-summary-newline = true
in-place = true
recursive = true
style = "nonumpy"
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    ".eggs",
    ".tox",
    ".venv",
    "venv",
    "logs",
    "src/automax.egg-info",
    "*.egg-info"
]

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_single_line = false
force_sort_within_sections = true
known_first_party = ["automax"]
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
skip = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    ".eggs",
    ".tox",
    ".venv",
    "venv",
    "logs",
    "src/automax.egg-info",
    "*.egg-info"
]

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'
extend-exclude = '''
/(
  | \.git
  | \.venv
  | build
  | dist
  | \.eggs
  | \.tox
  | venv
  | logs
  | src/automax\.egg-info
  |.*\.egg-info
)/
'''
