# Copyright (C) 2026 Marco Fortina
# SPDX-License-Identifier: AGPL-3.0-or-later

[build-system]
requires = ["setuptools>=80.9.0", "wheel", "build", "twine>=6.2.0"]
build-backend = "setuptools.build_meta"

[project]
name = "automax"
version = "0.2.0"
description = "YAML-driven modular SSH automation engine"
license-files = ["LICENSE"]
authors = [{ name = "Marco Fortina", email = "marco_fortina@hotmail.it" }]
requires-python = ">=3.9"
dependencies = [
    "click>=8.1,<9.0",
    "Jinja2>=3.1,<4.0",
    "paramiko>=3.4,<4.0",
    "pyyaml>=6.0,<7.0"
]

classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

readme = "README.md"

[project.scripts]
automax = "automax.cli:cli_main"

[project.optional-dependencies]
docs = [
    "mkdocs>=1.6,<2.0",
    "mkdocs-material>=9.5,<10.0",
    "mkdocstrings>=0.25,<1.0",
    "mkdocstrings-python>=1.10,<2.0",
    "pymdown-extensions>=10.0,<11.0",
]
dev = [
    "pytest>=7.4,<8.0",
    "black>=23.9,<24.0",
    "flake8>=6.0,<7.0",
    "isort>=5.12,<6.0",
    "coverage>=6.5,<7.0",
    "docformatter>=1.6,<2.0",
    "mkdocs>=1.6,<2.0",
    "mkdocs-material>=9.5,<10.0",
    "mkdocstrings>=0.25,<1.0",
    "mkdocstrings-python>=1.10,<2.0",
    "pymdown-extensions>=10.0,<11.0",
    "build>=1.2,<2.0",
    "twine>=6.2,<7.0",
]
postgres = ["psycopg[binary]>=3.1,<4.0"]
mysql = ["PyMySQL>=1.1,<2.0"]
oracle = ["oracledb>=2.0,<4.0"]
database = [
    "psycopg[binary]>=3.1,<4.0",
    "PyMySQL>=1.1,<2.0",
    "oracledb>=2.0,<4.0",
]

[project.urls]
Homepage = "https://github.com/marcofortina/automax"
Repository = "https://github.com/marcofortina/automax"
Changelog = "https://github.com/marcofortina/automax/blob/main/CHANGELOG.md"
Issues = "https://github.com/marcofortina/automax/issues"
Download = "https://github.com/marcofortina/automax/releases"

[tool.setuptools.packages.find]
where = ["src"]

[tool.docformatter]
wrap-summaries = 88
wrap-descriptions = 88
blank = true
make-summary-multi-line = true
pre-summary-newline = true
in-place = true
recursive = true
style = "nonumpy"
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    ".eggs",
    ".tox",
    ".venv",
    "venv",
    "logs",
    "src/automax.egg-info",
    "*.egg-info"
]

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_single_line = false
force_sort_within_sections = true
known_first_party = ["automax"]
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
skip = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    ".eggs",
    ".tox",
    ".venv",
    "venv",
    "logs",
    "src/automax.egg-info",
    "*.egg-info"
]

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'
extend-exclude = '''
/(
  | \.git
  | \.venv
  | build
  | dist
  | \.eggs
  | \.tox
  | venv
  | logs
  | src/automax\.egg-info
  |.*\.egg-info
)/
'''
