# Copyright (C) 2026 Marco Fortina
# SPDX-License-Identifier: AGPL-3.0-or-later

[build-system]
requires = ["setuptools>=80.9.0", "wheel", "build", "twine>=6.2.0"]
build-backend = "setuptools.build_meta"

[project]
name = "automax"
version = "0.2.0"
description = "YAML-driven modular SSH automation engine"
license-files = ["LICENSE"]
authors = [{ name = "Marco Fortina", email = "marco_fortina@hotmail.it" }]
requires-python = ">=3.9"
dependencies = [
    "click>=8.1,<9.0",
    "Jinja2>=3.1,<4.0",
    "paramiko>=5.0.0,<6.0",
    "pyyaml>=6.0,<7.0"
]

classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

readme = "README.md"

[project.scripts]
automax = "automax.cli:cli_main"

[project.optional-dependencies]
docs = [
    "mkdocs>=1.6,<2.0",
    "mkdocs-material>=9.5,<10.0",
    "mkdocstrings>=0.30.1,<2.0",
    "mkdocstrings-python>=1.10,<2.0",
    "pymdown-extensions>=10.0,<11.0",
]
dev = [
    "pytest>=8.4.2,<9.0; python_version < '3.10'",
    "pytest>=9.0.3,<10.0; python_version >= '3.10'",
    "ruff>=0.8,<1.0",
    "pre-commit>=4.0,<5.0",
    "coverage>=7.10.7,<7.11; python_version < '3.10'",
    "coverage>=7.14.0,<8.0; python_version >= '3.10'",
    "mkdocs>=1.6,<2.0",
    "mkdocs-material>=9.5,<10.0",
    "mkdocstrings>=0.30.1,<2.0",
    "mkdocstrings-python>=1.10,<2.0",
    "pymdown-extensions>=10.0,<11.0",
    "build>=1.2,<2.0",
    "twine>=6.2,<7.0",
]
postgres = ["psycopg[binary]>=3.1,<4.0"]
mysql = ["PyMySQL>=1.1,<2.0"]
oracle = ["oracledb>=4.0.1,<5.0"]
database = [
    "psycopg[binary]>=3.1,<4.0",
    "PyMySQL>=1.1,<2.0",
    "oracledb>=4.0.1,<5.0",
]

[project.urls]
Homepage = "https://github.com/marcofortina/automax"
Repository = "https://github.com/marcofortina/automax"
Changelog = "https://github.com/marcofortina/automax/blob/main/CHANGELOG.md"
Issues = "https://github.com/marcofortina/automax/issues"
Download = "https://github.com/marcofortina/automax/releases"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 88
target-version = "py39"
exclude = [
    ".git",
    ".venv",
    "build",
    "dist",
    ".eggs",
    ".tox",
    "venv",
    "site",
    "src/automax.egg-info",
]

[tool.ruff.lint]
select = ["E9", "F"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
